--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -1,40 +1,101 @@
-.home {
-  height: calc(90vh - 100px);
+.contact {
+  height: calc(100vh);
   width: 100%;
-  background-image: url(../../img/header-bg.jpg);
+  background-color: var(--bs-gray-dark);
+  background-image: url(../../img/map-image.png);
   background-size: 100%;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 
-  .wrapper {
+  .ctct-head {
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
+    align-items: center;
     color: white;
     font-family: var(--bs-font-sans-serif);
 
-    h2 {
+    .heading {
       font-size: 40px;
-      font-weight: normal;
+      font-weight: 600;
       margin: 0;
     }
-    h1 {
-      font-size: 80px;
-      font-weight: 900;
-      margin: 10px 0 40px 0;
+    .desc {
+      font-size: 22px;
+      font-weight: normal;
+      margin: 10px 0 100px 0;
+      color: var(--bs-gray-600);
     }
-    button {
-      background: var(--bs-primary);
-      color: white;
-      font-weight: 900;
-      font-size: 20px;
-      padding: 20px 30px;
-      border-radius: 5px;
-      border: none;
-      cursor: pointer;
-      outline: none;
+  }
+
+  form {
+    display: flex;
+    position: relative;
+    align-items: center;
+    justify-content: center;
+    border: none;
+    outline: none;
+    border-radius: 10px;
+    height: 300px;
+    width: calc(100% - 200px);
+
+    .left {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      width: 50%;
+      margin-right: 20px;
+
+      input {
+        width: 100%;
+        height: 50px;
+        border: inherit;
+        outline: inherit;
+        border-radius: 10px;
+        margin-bottom: 20px;
+        font-size: 22px;
+        font-family: var(--bs-font-sans-serif);
+        padding: 10px 10px;
+      }
     }
+    .right {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      width: 50%;
+      margin-left: 20px;
+      height: 100%;
+
+      textarea {
+        width: 100%;
+        height: 75%;
+        // resize: none;
+        border: inherit;
+        outline: inherit;
+        border-radius: 10px;
+        margin-bottom: 20px;
+        font-size: 22px;
+        font-family: var(--bs-font-sans-serif);
+        padding: 10px 10px;
+      }
+    }
+  }
+
+  button {
+    position: absolute;
+    top: 300px;
+    background: var(--bs-primary);
+    color: white;
+    font-weight: 900;
+    font-size: 20px;
+    padding: 20px 30px;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+    outline: none;
   }
 }
