--- a/src/components/Services/service.scss
+++ b/src/components/Services/service.scss
@@ -11,6 +11,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+
     .title {
       font-size: 40px;
       font-weight: 700;
@@ -27,7 +28,7 @@
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    margin: 100px 100px 0 100px;
+    margin: 0 100px 0 100px;
     height: 400px;
 
     .item {
@@ -43,6 +44,7 @@
 
         span {
           font-weight: 500;
+          color: black;
           font-size: 24px;
           margin-top: 10px;
         }
