--- a/src/components/clients/clients.scss
+++ b/src/components/clients/clients.scss
@@ -1,6 +1,6 @@
 .clients {
   height: 20vh;
-  width: calc(100%);
+  width: 100%;
   margin: 0 auto 0 auto;
   display: flex;
   align-items: center;
@@ -9,5 +9,12 @@
   img {
     height: 65px;
     width: auto;
+
+    @media (max-width: 1600px) {
+      height: auto;
+    }
+    @media (max-width: 960px) {
+      height: auto;
+    }
   }
 }
