--- a/src/components/Services/service.scss
+++ b/src/components/Services/service.scss
@@ -6,6 +6,10 @@
   width: 100%;
   align-items: center;
   font-family: var(--bs-font-sans-serif);
+  @media (max-width: 1600px) {
+    margin: 100px auto;
+    height: auto;
+  }
 
   .header {
     display: flex;
@@ -31,10 +35,21 @@
     margin: 0 100px 0 100px;
     height: 400px;
 
+    @media (max-width: 1600px) {
+      margin-bottom: 0px !important;
+      margin: 0px auto;
+      display: flex;
+      flex-direction: column;
+      height: auto;
+    }
+
     .item {
       width: 400px;
       height: 100%;
       margin: 0 30px;
+      @media (max-width: 1600px) {
+        margin-top: 50px;
+      }
 
       .head {
         display: flex;
