--- a/src/components/team/teamMem.scss
+++ b/src/components/team/teamMem.scss
@@ -17,6 +17,10 @@
     font-weight: 600;
     margin-bottom: 5px;
     margin-top: 30px;
+
+    @media (max-width: 1600px) {
+      font-size: 32px;
+    }
   }
 
   .designation {
