--- a/src/components/About/aboutItem.scss
+++ b/src/components/About/aboutItem.scss
@@ -1,25 +1,31 @@
 .about-item {
+  width: calc(50% + 110px);
   display: flex;
   flex-direction: row;
   align-items: center;
   margin-bottom: 20vh;
+  @media (max-width: 1600px) {
+    width: 100%;
+  }
 
   &.itemL {
-    margin-left: 50px;
+    position: relative;
+    right: calc(0% - 50px);
+
     @media (max-width: 1600px) {
-      margin: 100px auto;
-    }
-    @media (max-width: 960px) {
+      right: 0;
+      position: relative;
       margin: 100px auto;
     }
   }
 
   &.itemR {
-    margin-left: 38.5vw;
+    position: relative;
+    left: calc(50% - 110px);
+
     @media (max-width: 1600px) {
-      margin: 100px auto;
-    }
-    @media (max-width: 960px) {
+      position: relative;
+      left: 0;
       margin: 100px auto;
     }
   }
