--- a/src/components/About/about.scss
+++ b/src/components/About/about.scss
@@ -1,6 +1,6 @@
 .about {
   width: calc(100% - 200px);
-  height: 230vh;
+  height: auto;
   margin: 0 auto 0 auto;
   @media (max-width: 1600px) {
     height: auto;
@@ -41,12 +41,13 @@
     }
 
     .last {
-      width: 200px;
+      position: relative;
+      left: calc(50% - 110px);
+      height: 220px;
+      width: 220px;
       color: white;
-      // margin: 0 0 30px 39vw;
-      margin-left: 39vw;
+      // margin-left: 39vw;
       background-color: var(--bs-primary);
-      height: 200px;
       border: solid 10px var(--bs-gray-300);
       border-radius: 50%;
       font-family: var(--bs-font-sans-serif);
@@ -58,13 +59,16 @@
       padding: 0px 30px;
       box-sizing: border-box;
       text-align: center;
+
       @media (max-width: 1600px) {
         width: 300px;
         height: 150px;
         border-radius: 0;
         margin: auto;
+        left: 0;
       }
       @media (max-width: 960px) {
+        left: 0;
         margin: auto;
         width: 300px;
         border-radius: 0;
