--- a/src/components/About/about.scss
+++ b/src/components/About/about.scss
@@ -1,7 +1,7 @@
 .about {
   width: calc(100% - 200px);
   height: auto;
-  margin: 0 auto 0 auto;
+  margin: 100px auto 100px auto;
   @media (max-width: 1600px) {
     height: auto;
   }
