--- a/src/components/Portfolio/portfolio.scss
+++ b/src/components/Portfolio/portfolio.scss
@@ -1,5 +1,8 @@
 .portfolio {
-  width: calc(100% - 200px);
+  width: calc(100%);
+  background-color: var(--bs-gray-200);
+  padding-top: 100px;
+  padding-bottom: 100px;
   height: auto;
   margin: 0 auto 0 auto;
 
@@ -11,7 +14,7 @@
       font-size: 40px;
       font-weight: 600;
       margin-bottom: 15px;
-      margin-top: 50px;
+      // margin-top: 50px;
     }
     span {
       color: var(--bs-gray-600);
@@ -20,7 +23,7 @@
   }
 
   .cards {
-    margin: 100px auto 400px auto;
+    margin: 100px auto 0 auto;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 60px 5px;
